--- a/index.html
+++ b/index.html
@@ -3,5 +3,32 @@ layout: home
 author_profile: true
 ---
 
-<h3>Category</h3>
+<h2>Categories</h2>
 
+<ul class="nav__items">   
+  <li>
+      <span class="nav__sub-title">WAS</span>
+    <ul>
+        <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
+        <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
+    </ul>
+  </li>
+  <li>
+      <span class="nav__sub-title">Web Hacking</span>
+    <ul>
+        <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="">webhacking.kr</a></li>
+    </ul>
+  </li>
+  <li>
+      <span class="nav__sub-title">Reversing</span>
+    <ul>
+        <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="">CodeEngn Basic</a></li>
+    </ul>
+  </li>
+  <li>
+      <span class="nav__sub-title">Pwnable</span>
+    <ul>
+        <li><a href="https://s01va.github.io/tags/#lob" class="">Lord of BOF</a></li>
+    </ul>
+  </li>
+</ul>
