making gate page

--- a/index.html
+++ b/index.html
@@ -5,33 +5,35 @@ author_profile: true
 
 <h2>Categories</h2>
 
-<ul class="nav__items">   
-  <li>
-      <span class="nav__sub-title">WAS</span>
-    <ul>
-        <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
-        <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
-    </ul>
-  </li>
-  <li>
-      <span class="nav__sub-title">Web Hacking</span>
-    <ul>
-        <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="">webhacking.kr</a></li>
-    </ul>
-  </li>
-  <li>
-      <span class="nav__sub-title">Reversing</span>
-    <ul>
-        <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="">CodeEngn Basic</a></li>
-    </ul>
-  </li>
-  <li>
-      <span class="nav__sub-title">Pwnable</span>
-    <ul>
-        <li><a href="https://s01va.github.io/tags/#lob" class="">Lord of BOF</a></li>
-    </ul>
-  </li>
-</ul>
+<nav class="nav__list">
+  <ul class="nav__items">   
+    <li>
+        <span class="nav__sub-title">WAS</span>
+      <ul>
+          <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
+          <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
+      </ul>
+    </li>
+    <li>
+        <span class="nav__sub-title">Web Hacking</span>
+      <ul>
+          <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="">webhacking.kr</a></li>
+      </ul>
+    </li>
+    <li>
+        <span class="nav__sub-title">Reversing</span>
+      <ul>
+          <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="">CodeEngn Basic</a></li>
+      </ul>
+    </li>
+    <li>
+        <span class="nav__sub-title">Pwnable</span>
+      <ul>
+          <li><a href="https://s01va.github.io/tags/#lob" class="">Lord of BOF</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
 
 <br>
 <br>
