--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ author_profile: true
 <h1>Categories</h1>
 
 <nav class="nav__list">
+  <input id="ac-toc" name="accordion-toc" type="checkbox">
+  <label for="ac-toc">토글 메뉴</label>
   <ul class="nav__items">   
     <li>
         <span class="nav__sub-title">WAS</span>
