test set link to category

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ author_profile: true
   <label for="ac-toc">토글 메뉴</label>
   <ul class="nav__items">   
     <li>
-        <span class="nav__sub-title">WAS</span>
+        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#was" class="">WAS</a></span>
       <ul>
           <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
           <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
