set link to categories

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@ author_profile: true
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title">Web Hacking</span>
+        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#webhacking" class="">Web Hacking</a></span>
       <ul>
           <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="">webhacking.kr</a></li>
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title">Reversing</span>
+        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#reversing" class="">Reversing</a></span>
       <ul>
           <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="">CodeEngn Basic</a></li>
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title">Pwnable</span>
+        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#pwnable" class="">Pwnable</a></span>
       <ul>
           <li><a href="https://s01va.github.io/tags/#lob" class="">Lord of BOF</a></li>
       </ul>
