--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ author_profile: true
       <ul>
           <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
           <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
+          <li><a href="https://s01va.github.io/tags/#jvm" class="">JVM</a></li>
       </ul>
     </li>
     <li>
