change span class

--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@ author_profile: true
   <label for="ac-toc">토글 메뉴</label>
   <ul class="nav__items">   
     <li>
-        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#was" class="">WAS</a></span>
+        <span class="nav__title"><a href="https://s01va.github.io/tags/#was" class="">WAS</a></span>
       <ul>
-          <li><a href="https://s01va.github.io/tags/#jeus" class="">JEUS</a></li>
-          <li><a href="https://s01va.github.io/tags/#weblogic" class="">WebLogic</a></li>
-          <li><a href="https://s01va.github.io/tags/#troubleshooting" class="">Troubleshooting</a></li>
+          <li><a href="https://s01va.github.io/tags/#jeus" class="nav__sub-title">JEUS</a></li>
+          <li><a href="https://s01va.github.io/tags/#weblogic" class="nav__sub-title">WebLogic</a></li>
+          <li><a href="https://s01va.github.io/tags/#troubleshooting" class="nav__sub-title">Troubleshooting</a></li>
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#webhacking" class="">Web Hacking</a></span>
+        <span class="nav__title"><a href="https://s01va.github.io/tags/#webhacking" class="">Web Hacking</a></span>
       <ul>
-          <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="">webhacking.kr</a></li>
+          <li><a href="https://s01va.github.io/tags/#webhacking-kr" class="nav__sub-title">webhacking.kr</a></li>
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#reversing" class="">Reversing</a></span>
+        <span class="nav__title"><a href="https://s01va.github.io/tags/#reversing" class="nav__sub-title">Reversing</a></span>
       <ul>
-          <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="">CodeEngn Basic</a></li>
+          <li><a href="https://s01va.github.io/tags/#codeengn-basic" class="nav__sub-title">CodeEngn Basic</a></li>
       </ul>
     </li>
     <li>
-        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#pwnable" class="">Pwnable</a></span>
+        <span class="nav__title"><a href="https://s01va.github.io/tags/#pwnable" class="nav__sub-title">Pwnable</a></span>
       <ul>
           <li><a href="https://s01va.github.io/tags/#lob" class="">Lord of BOF</a></li>
       </ul>
