index 추가 - programming

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@ author_profile: true
 <nav class="nav__list">
   <input id="ac-toc" name="accordion-toc" type="checkbox">
   <label for="ac-toc">토글 메뉴</label>
-  <ul class="nav__items">   
+  <ul class="nav__items">
+     <li>
+        <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#programming" style="font-size: 0.8em">Programming</a></span>
+      <ul>
+          <li><a href="https://s01va.github.io/tags/#python" style="font-size: 0.8em">Python</a></li>
+          <li><a href="https://s01va.github.io/tags/#basiccs" style="font-size: 0.8em">Basic CS</a></li>
+          <li><a href="https://s01va.github.io/tags/#datastructure" style="font-size: 0.8em">Data Structure</a></li>
+          <li><a href="https://s01va.github.io/tags/#algorithm" style="font-size: 0.8em">Algorithm</a></li>
+      </ul>
+    </li>
     <li>
         <span class="nav__sub-title"><a href="https://s01va.github.io/tags/#was" style="font-size: 0.8em">WAS</a></span>
       <ul>
