--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@ author_profile: true
 
 <h1>Categories</h1>
 
+{% include nav_list nav=page.sidebar.nav %}
+
+<!--
 <nav class="nav__list">
   <input id="ac-toc" name="accordion-toc" type="checkbox">
   <label for="ac-toc">토글 메뉴</label>
@@ -46,6 +49,7 @@ author_profile: true
     </li>
   </ul>
 </nav>
+-->
 
 <br>
 <br>
