cloudsec2023 후기 일부 수정

--- a/After-CloudSec2023Korea/index.html
+++ b/After-CloudSec2023Korea/index.html
@@ -468,7 +468,7 @@ Log4j가 터졌을 때 기업 내에서의 전형적인 사례:</p>
 <p>런타임 기반 SBOM을 보는게 맞다는 의견(이유는 지금도 궁금)</p>
 <h3>보안 위협 대응에 관해</h3>
 <p>기본적으로 만족되어야 하는 것: 데이터 수집 유무와 방식, 데이터의 정확도, 대응 시간</p>
-<p>기업의 일하는 방식의 변화(재택/하이브리드 근무)에 따른 endpoint 확장은 이전으로 돌아오기 어려우며,</p>
+<p>기업의 일하는 방식의 변화(재택/하이브리드 근무)에 따른 endpoint 확장은 이전으로 돌아오기 어려우며, 이와 같이 변화한 환경은 그대로 인기있는 보안 홀이 되고 있다. 이와 같은 것들 또한 관리해 나가지 않으면 안됨.</p>
 <p>NIST가 제시한 기준/조건 7가지 항목 중 무려 4개가 가시성에 대한 이야기이다.(NIST SP800-207?)</p>
 <p>앞으로의 Security Tool이 가져야 할 필수요건:
 실시간 조회 및 조치</p>
