--- a/offline-plugin-app-shell-fallback/index.html
+++ b/offline-plugin-app-shell-fallback/index.html
@@ -3,10 +3,20 @@
                 google_ad_client: "pub-1418443722497332",
                 enable_page_level_ads: true
               });
-          </script></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/offline-plugin-app-shell-fallback/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
+          </script><link rel="preconnect" href="https://www.googletagmanager.com"/><link rel="dns-prefetch" href="https://www.googletagmanager.com"/></head><body><div id="___gatsby"><div style="outline:none" tabindex="-1" id="gatsby-focus-wrapper"></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-P7YKMPN3VS"></script><script>
+      
+      
+      if(true) {
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P7YKMPN3VS', {"send_page_view":false});
+      }
+      </script><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/offline-plugin-app-shell-fallback/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-e1cf538ba779ba42cbd9.js\"],\"component---cache-caches-gatsby-plugin-offline-app-shell-js\":[\"/component---cache-caches-gatsby-plugin-offline-app-shell-js-342b8d1cd7261a1b5b72.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-pages-404-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-pages-404-tsx-4beb58aa22840b92d3e1.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-index-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-index-tsx-8eceb69db992d63b090a.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-listing-index-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-listing-index-tsx-715cf00fbfc10dfead31.js\"],\"component---src-pages-imprint-js\":[\"/component---src-pages-imprint-js-bea7ef10421a02f582c5.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-48c4658be7da2f19f096.js\"],\"component---src-pages-privacy-js\":[\"/component---src-pages-privacy-js-c5dfc3020bf827545b4c.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-884810493065d2b06572.js\"],\"component---cache-caches-gatsby-plugin-offline-app-shell-js\":[\"/component---cache-caches-gatsby-plugin-offline-app-shell-js-342b8d1cd7261a1b5b72.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-pages-404-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-pages-404-tsx-4beb58aa22840b92d3e1.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-index-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-index-tsx-8eceb69db992d63b090a.js\"],\"component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-listing-index-tsx\":[\"/component---node-modules-gatsby-theme-portfolio-minimal-src-templates-article-listing-index-tsx-2b61ae95deb6de5b1a57.js\"],\"component---src-pages-imprint-js\":[\"/component---src-pages-imprint-js-bea7ef10421a02f582c5.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-48c4658be7da2f19f096.js\"],\"component---src-pages-privacy-js\":[\"/component---src-pages-privacy-js-c5dfc3020bf827545b4c.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="c9cb238352237918297c";</script><script src="/webpack-runtime-b4e15651aea6ae000a05.js" async></script><script src="/framework-7f0a01d2a80d5fea2aa0.js" async></script><script src="/app-e1cf538ba779ba42cbd9.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
+        <script>window.___webpackCompilationHash="d4f67aa701c2612fa7b2";</script><script src="/webpack-runtime-b2fd8ce2b11f6b4bc238.js" async></script><script src="/framework-7f0a01d2a80d5fea2aa0.js" async></script><script src="/app-884810493065d2b06572.js" async></script><!-- slice-end id="_gatsby-scripts-1" --></body></html>
